# Measure_Force_Accelerometer

./: README.md
Measure_Force/: CMakeLists.txt
Measure_Force/Common/: CMakeLists.txt
Measure_Force/Common/Include/: HUY_HTTP_SERVER_Drive.h  HUY_HX711_Drive.h  HUY_I2C_Drive.h  HUY_MPU6050_Drive.h  HUY_MQTT_Drive.h
Measure_Force/Common/Source/: HUY_GPIO_Drive.c  HUY_HTTP_SERVER_Drive.c  HUY_HX711_Drive.c  HUY_I2C_Drive.c  HUY_MPU6050_Drive.c  HUY_MQTT_Drive.c  HUY_WIFI_Drive.c
Measure_Force/html/: index.html
Measure_Force/main/: CMakeLists.txt  Project_main.c  component.mk
PWM_GATE/Common/Include/: HUY_GPIO_Drive.h  HUY_HTTP_SERVER_Drive.h  HUY_WIFI_Drive.h  Huy_PWM_Drive.h
PWM_GATE/Common/Source/: HUY_HTTP_SERVER_Drive.c  HUY_PWM_Drive.c
PWM_GATE/main/: CMakeLists.txt  PWM_main.c
